--- a/src/app/componentes/produto-tela/produto-tela.component.html
+++ b/src/app/componentes/produto-tela/produto-tela.component.html
@@ -20,7 +20,7 @@
   </mat-card-content>
   
   <mat-card-actions>
-    <button mat-stroked-button color="primary" (click)="criartime()" >Criar Time</button>
+    <button mat-stroked-button color="primary" (click)="criartime()" >Criar Produto</button>
   </mat-card-actions>  
 </mat-card>
 
